agregado de link de redes sociales, modificacion de boton en home y servicios con link, agregado de miembro de equipo y modificacion de equipodata para agregar linkedin y miembro de equipo

--- a/src/components/Equipo/Equipo.scss
+++ b/src/components/Equipo/Equipo.scss
@@ -113,4 +113,14 @@ $mobile-breakpoint: 768px;
       font-size: 0.9rem;
     }
   }
+
+  &__linkedin-link {
+    text-decoration: none;
+    color: #151515; // Azul de LinkedIn
+    transition: color 0.3s ease;
+
+    &:hover {
+      color: #0286c5;
+    }
+  }
 }
